# NexusOCRTask

./: README.md  pyproject.toml
ocrnexuspkg/: OCRReader_v1.py
tests/: test_ocrnexuspkg.py
